<resources>
    <string name="app_name">Movie Manager</string>
    <string name="action_settings">Settings</string>
    <string name="item_list_fragment_label">Item List</string>
    <string name="item_edit_fragment_label">Item Edit</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="item_list_fragment">Item list fragment</string>
    <string name="item_edit_fragment">Item edit fragment</string>
    <string name="add_button">AddButton</string>
    <string name="individuals_list">List of individuals</string>
    <string name="reveal_app_title">Reveal App Title</string>
    <string name="hide_app_title">Hide App Title</string>
</resources>